Closed Bug 614111 Opened 15 years ago Closed 15 years ago

Direct3D 9 (non-ex) Devices cannot be reset

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta8+

People

(Reporter: bas.schouten, Assigned: bas.schouten)

References

Details

Attachments

(1 file, 1 obsolete file)

For a while now we've had D3D9 devices use a VertexBuffer in D3DPOOL_DEFAULT. This is fine but it means the buffer needs to be released and recreated when a device reset is performed on a non D3D9-ex device (for example after screenlock), otherwise the device reset will fail and we will consider the device lost beyond hope and recreate all layer managers.
Attachment #492482 - Flags: review?(jmuizelaar)
This is a big problem for Windows XP.
blocking2.0: --- → ?
Add missing return true.
Assignee: nobody → bas.schouten
Attachment #492482 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #492482 - Flags: review?(jmuizelaar)
sounds like we need to change this from nominated for 2.0 to blocking beta8 to reduce the volume of the #1 top crash on trunk (bug 611597).
Can we just used D3DPOOL_MANAGED to avoid loosing the vertex buffer on device reset?
blocking2.0: ? → beta8+
Attachment #492489 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
No longer blocks: 611597
Depends on: 614762
Blocks: 611597
Depends on: 614771
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: