Bug 614111: Clear and recreate VertexBuffer on device reset. r=jrmuizel a=blocking-beta8